--- a/DynamicWeb/THE DOM/index.html
+++ b/DynamicWeb/THE DOM/index.html
@@ -4,11 +4,18 @@
       <title>Add content using DOM</title>
 </head>
 <body>
-      <p id="main-text">Words about things...</p>
-      <script>
-         let p = document.getElementById("main-text");
-         p.append("More words about things");
-         console.log(p.innerHTML);
+    <script>
+        window.addEventListener("load", function(){
+          let confirm = window.confirm("Do you want more words?");
+          if (confirm) {
+              let p = document.getElementById("main-text");
+          p.append("More words about things");
+          console.log(p.innerHTML);
+          }else {
+            window.alert("No more words for you then")
+        }
+      })
+        </script>
       </script>
 </body>
 </html>
